DBX2006/Dbxsrc/Common/Dbx32.h


#define DBX_MAX_NAME_LEN            100     
#define DBX_MAX_TEXTITEM_LEN        256     
#define DBX_MAX_FILENAME_LEN        256     
#define DBX_COORDINATE              901     
 DbxContext;
 TCoord;
 TBoundRect;
 TArc;
 TAttribute;
 TBus;
 TClassToClass;
 TComponent;
 TCompGraphic;
 TCompPin;
 TDesign;
 TField;
 TGrid;
 TLayer;
 TLine;
 TNet;
 TNetClass;
 TPad;
 TPadViaShape;
 TPadViaStyle;
 TPattern;
 TPin;
 TPoint;
 TPoly ;
 TPort;
 TPour;
 TPrintJob;
 TRoom;
 TSymbol;
 TText;
 TTextStyle;
 TVia;
 TWire;
 TTable;
 TMetaFile;
 TDiagram;
 TDetail;
 TLayerStackup;
 TVariant;
TItem;
 TPadViaRegularPolyShape;
long 
DLLX TAddClassToClassAttribute     (DbxContext* pContext,       
                                    long      netClassId1,      
                                    long      netClassId2,      
                                    TAttribute* TAttribute);    
long 
DLLX TAddClassToClassLayerRule(DbxContext* pContext,    
                               long        netClassId1, 
                               long        netClassId2, 
                         const char*       layerName,   
                               TAttribute* pAttr);      
long
DLLX TAddCompAttribute     (DbxContext* pContext,       
                                  char* pCompRefDes,    
                            TAttribute* TAttribute);    
long  
DLLX  TAddDesignAttribute     (DbxContext* pContext,     
                               TAttribute* pTAttr);      
long  
DLLX  TAddIncludedRoomComponent (DbxContext* pContext,        
                                 long        roomId,          
                                 TComponent* pTComponent);    
long  
DLLX  TAddLayerAttribute     (DbxContext* pContext,     
                              long        layerId,      
                              TAttribute* pTAttr);      
long 
DLLX TAddNetAttribute     (DbxContext* pContext,       
                           long        netId,          
                           TAttribute* TAttribute);    
long 
DLLX TAddNetClassAttribute     (DbxContext* pContext,       
                                long      netClassId,       
                               TAttribute* TAttribute);     
long 
DLLX TAddNetClassLayerRule(DbxContext* pContext,   
                           long        netClassId, 
                     const char*       layerName,  
                           TAttribute* pAttr);     
long 
DLLX TAddNetClassNet     (DbxContext* pContext,       
                          long      netClassId,       
                          TNet*           pTNet);     
long 
DLLX TAddNetLayerRule(DbxContext* pContext,   
                      long        netId,      
                const char*       layerName,  
                      TAttribute* pAttr);     
long 
DLLX TAddNetNode          (DbxContext* pContext,       
                           long        netId,          
                           TItem*      pTItem);        
long  
DLLX  TAddRoomAttribute     (DbxContext* pContext, 
                             long        roomId,   
                             TAttribute* pTAttr);  
long
DLLX TAddLayer      (DbxContext* pContext,
                     TLayer* pLayer);
long
DLLX TAddSheet      (DbxContext* pContext,
                     TLayer* pLayer);
long 
DLLX TAddVariant(DbxContext* pContext, TVariant* pVariant);
long 
DLLX TDeleteVariant(DbxContext* pContext, TVariant* pVariant);
long 
DLLX TRenameVariant(DbxContext* pContext, TVariant* pVariant);
long 
DLLX TGetFirstVariant(DbxContext* pContext, TVariant* pVariant);
long
DLLX TGetNextVariant(DbxContext* pContext, TVariant* pVariant);
long 
DLLX TCloseComponent  (DbxContext*   pContext);
long 
DLLX TCloseDesign(DbxContext* pContext, 
                  const char* pDesignName);
long 
DLLX  TCloseLibrary(DbxContext* pContext,       
                    const char* pLibraryName);  
long 
DLLX TCopyComponent   (DbxContext*   pContext, 
                       const char*   pSCompType,
                       const char*   pSLibName,
                       const char*   pDCompType,
                       const char*   pDLibName);
long 
DLLX TCopyPattern     (DbxContext*   pContext, 
                       const char*   pSPatName,
                       const char*   pSLibName,
                       const char*   pDPatName,
                       const char*   pDLibName);
long 
DLLX TCopySymbol      (DbxContext*   pContext, 
                       const char*   pSSymbolName,
                       const char*   pSLibName,
                       const char*   pDSymbolName,
                       const char*   pDLibName);
long 
DLLX TCreateClassToClass  (DbxContext* pContext,            
                           TClassToClass* pTClassToClass);  
long 
DLLX TCreateNet  (DbxContext* pContext,     
                  TNet*       pTNet);       
long 
DLLX TCreateNetClass  (DbxContext* pContext,     
                       TNetClass*  pTNetClass);  