DBX2006/Dbxsrc/Common/dbx32.BAS


Type TPoint
    itemId As Long
    x As Long
    y As Long
    pointType As Long                   ' =0 for DBX_COORDINATE Point Type
    number As Long
    textInfo As String * DBX_MAX_TEXTITEM_LEN
    layerId As Long
    isFlipped As Long
    isVisible As Long
    isHighlighted As Long
    ruleCategory As Long              ' ERC/DRC rule category;       InfoPoint only; new V15
    ruleType As Long                  ' ERC/DRC rule type;           InfoPoint only; new V15
    violationType As Long             ' violation type of InfoPoint; InfoPoint only; new V15 
    placementSide As Long             ' TestPoint only
    isSnapToCenter As Long            ' TestPoint only
    netId As Long                     ' TestPoint only
    isFixed As Long                   ' TestPoint only
End Type

Type TPoly
    itemId As Long
    polyType As Long
    numPts As Long
    boundRect As TBoundRect
    netId As Long
    layerId As Long
    isHighlighted As Long
End Type

Type TPort
    itemId As Long
    netId As Long
    portType As Long
    pinLength As Long
    rotationAng As Long
    isFlipped As Long
    isHighlighted As Long
    textStyleId As Long
    layerId As Long
    refPoint As TCoord
End Type

Type TPour
    itemId As Long
    lineSpacing As Long          ' in database units
    lineWidth As Long            ' in database units
    thermalType As Long
    pourType As Long
    numPts As Long               ' number of outline points
    boundRect As TBoundRect
    netId As Long
    layerId As Long
    isFlooded As Long
    isHighlighted As Long        ' Highlight color: 0,1,2,3,4
    isFixed As Long
End Type

Type TPrintJob
    isSelected As Long                            ' Is PrintJob selected for output.
    jobName As String * DBX_MAX_FILENAME_LEN      ' Print job name.
    isRotated As Long                             ' Is PrintJob marked for rotated output.
End Type

Type TRoom
    roomId          As Long
    roomName        As String * DBX_MAX_NAME_LEN
    layerId         As Long
    numberOfIncludedComps   As Long
    numberOfExcludedComps   As Long
    boundRect       As TBoundRect
    placementSide   As Long
    isFixed         As Long
    isFlipped       As Long
    isHighlighted   As Long
    roomFillPattern As Long
    refPoint        As TCoord
    rotationAngle   As Long
End Type

Type TSymbol
    symbolId As Long
    symbolName As String * DBX_MAX_NAME_LEN
    refDes As String * DBX_MAX_NAME_LEN
    numberPins As Long
    partnumber As Long
    altType As Long
    refPoint As TCoord
    boundRect As TBoundRect
    rotationAng As Long
    isFlipped As Long
    isHighlighted As Long
    layerId As Long
    compType As String * DBX_MAX_NAME_LEN
    libraryName As String * DBX_MAX_NAME_LEN
End Type

Type TText
    itemId As Long
    textStyleId As Long
    text As String * DBX_MAX_TEXTITEM_LEN
    layerId As Long
    justPoint As Long
    refPoint As TCoord
    boundRect As TBoundRect
    rotationAng As Long
    isFlipped As Long
    isVisible As Long
    isHighlighted As Long
End Type

Type TTextStyle
    styleId As Long
    name As String * DBX_MAX_NAME_LEN
    strokePenWidth As Long
    strokeHeight As Long
    tTypeFaceName As String * DBX_MAX_NAME_LEN
    tTypeHeight As Long
    isTrueTypeAllowed As Long
    isDisplayTrueType As Long
End Type

Type TVia
    itemId As Long
    netId As Long
    center As TCoord
    rotationAng As Long
    viaStyleId As Long
    boundRect As TBoundRect
    isFlipped As Long
    isHighlighted As Long
    isFixed As Long
End Type

Type TWire
    itemId As Long
    startPt As TCoord
    endPt As TCoord
    layerId As Long
    isFlipped As Long             ' =0 not flipped
    isHighlighted As Long         ' Highlight color: 0,1,2,3,4
    isNameVisible As Long
    netId As Long
    width As Long
End Type

 
Type TTable                ' (Pcb/Sch)
    itemId As Long
    refPoint As TCoord
    layerId As long
    boundRect As TBoundRect    
    rotationAng As Long
    isHighlighted As Long
    isFlipped As Long
    tableType As long
    tableTitle As String * DBX_MAX_TEXTITEM_LEN
    textStyleId As Long
    lineWidth As Long
End Type

 
Type TMetaFile        ' (Pcb)
    itemId As long
    refPoint As TCoord
    layerId As Long
    boundRect As TBoundRect
End Type

 

Type TDiagram            ' (Pcb)
    itemId As Long
    refPoint As TCoord
    layerId As long
    boundRect As TBoundRect
    diagramType As long
    title As String * DBX_MAX_TEXTITEM_LEN
    subTitle As String * DBX_MAX_TEXTITEM_LEN
    textStyleId As Long      ' of title, subtitle
    lineWidth As Long        ' Used only with StackUp diagram
End Type

 
Type TDetail            ' (Pcb)
    itemId As Long
    refPoint As TCoord        
    layerId As long
    boundRect As TBoundRect
    title As String * DBX_MAX_TEXTITEM_LEN
    subTitle As String * DBX_MAX_TEXTITEM_LEN
    fileName As String * DBX_MAX_FILENAME_LEN
    textStyleId As Long        ' of title, subtitle
End Type

Type TVariant            ' (Pcb/Sch)
    name As String * DBX_MAX_NAME_LEN
    description As String * DBX_MAX_TEXTITEM_LEN
    id As Long
End Type


' The following structure defines TItem, which can contain any of the
' extracted items.


Type TItem
    itemType    As Long
    arc         As TArc
    attribute   As TAttribute
    bus         As TBus
    classToClass As TClassToClass
    component   As TComponent
    compPin     As TCompPin
    design      As TDesign
    detail      As TDetail         
    diagram     As TDiagram         
    field       As TField
    grid        As TGrid
    layer       As TLayer
    layerStack  As TLayerStackup
    aline       As TLine
    metaFile    As TMetaFile     
    net         As TNet
    netClass    As TNetClass
    pad         As TPad
    padViaShape As TPadViaShape
    padViaStyle As TPadViaStyle
    pattern     As TPattern
    pin         As TPin
    apoint      As TPoint
    poly        As TPoly
    port        As TPort
    pour        As TPour
    printJob    As TPrintJob
    room        As TRoom
    symbol      As TSymbol
    table       As TTable         
    text        As TText
    textStyle   As TTextStyle
    via         As TVia
    wire        As TWire
    compGraphic As TCompGraphic
    variant     As TVariant
End Type

' This type is used to add or modify the pad and via shape in PCB
' The shape is a regular polygon that is defined by the 
' number of sides, rotation angle and circular diameter

Type TPadViaRegularPolyShape  '(PCB)
	layerId      As Long   
	layerType    As Long
	styleType    As Long         ' Pad or Via Style
	numSides     As Long         ' Number of the polygon sides
	rotAngle     As Long         ' Rotation angle
	circDia      As Long         ' Circular diameter
	isPourNoConn As Long         ' Prohibit Cu pour thermalizing
End Type

' The DBX API

Declare Function TAddClassToClassAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, classToClassAttribute As TAttribute) As Long
Declare Function TAddClassToClassLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TAddCompAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, compAttribute As TAttribute) As Long
Declare Function TAddDesignAttribute Lib "dbx32.dll" (Context As DbxContext, designAttr As TAttribute) As Long
Declare Function TAddIncludedRoomComponent Lib "dbx32.dll" (Context As DbxContext, ByVal roomId As Long, component As TComponent) As Long
Declare Function TAddLayerAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal layerId As Long, layerAttr As TAttribute) As Long
Declare Function TAddNetAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, netAttribute As TAttribute) As Long
Declare Function TAddNetClassAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, netClassAttribute As TAttribute) As Long
Declare Function TAddNetClassLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TAddNetClassNet Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, net As TNet) As Long
Declare Function TAddNetLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TAddNetNode Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, netNode As TItem) As Long
Declare Function TAddRoomAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal roomId As Long, roomAttr As TAttribute) As Long

Declare Function TAddLayer Lib "dbx32.dll" (Context As DbxContext, layer As TLayer) As Long
Declare Function TAddSheet Lib "dbx32.dll" (Context As DbxContext, sheet As TLayer) As Long

Declare Function TAddVariant Lib "dbx32.dll" (Context As DbxContext, a_variant As TVariant) As Long
Declare Function TDeleteVariant Lib "dbx32.dll" (Context As DbxContext, a_variant As TVariant) As Long
Declare Function TRenameVariant Lib "dbx32.dll" (Context As DbxContext, a_variant As TVariant) As Long
Declare Function TGetFirstVariant Lib "dbx32.dll" (Context As DbxContext, a_variant As TVariant) As Long
Declare Function TGetNextVariant Lib "dbx32.dll" (Context As DbxContext, a_variant As TVariant) As Long

Declare Function TCloseComponent Lib "dbx32.dll" (Context As DbxContext) As Long
Declare Function TCloseDesign Lib "dbx32.dll" (Context As DbxContext, ByVal designName As String) As Long
Declare Function TCloseLibrary Lib "dbx32.dll" (Context As DbxContext, ByVal pLibraryName As String) As Long

Declare Function TCopyComponent Lib "dbx32.dll" (Context As DbxContext, ByVal pSCompType As String, ByVal pSLibName As String, ByVal pDCompType As String, ByVal pDLibName As String) As Long
Declare Function TCopySymbol Lib "dbx32.dll" (Context As DbxContext, ByVal pSSymbolName As String, ByVal pSLibName As String, ByVal pDSymbolName As String, ByVal pDLibName As String) As Long
Declare Function TCopyPattern Lib "dbx32.dll" (Context As DbxContext, ByVal pSPatName As String, ByVal pSLibName As String, ByVal pDPatName As String, ByVal pDLibName As String) As Long

Declare Function TCreateClassToClass Lib "dbx32.dll" (Context As DbxContext, classToClass As TClassToClass) As Long
Declare Function TCreateNet Lib "dbx32.dll" (Context As DbxContext, net As TNet) As Long
Declare Function TCreateNetClass Lib "dbx32.dll" (Context As DbxContext, netClass As TNetClass) As Long
